// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateIndex > Should generate full index 1`] = `
[
  {
    "h": "Demo Page",
    "id": "v-2b30cdfd",
    "t": [
      "Here is article excerpt.",
      "const a = 1; ",
    ],
  },
  {
    "h": "Content",
    "id": "v-2b30cdfd#content",
    "t": [
      "Here is main content of article.",
      "A",
      "B",
      "C",
      "const a = 1; ",
    ],
  },
]
`;

exports[`generateIndex > Should generate full index 2`] = `
[
  {
    "h": "Heading 1",
    "id": "v-1bb9c728",
  },
  {
    "h": "Heading 2",
    "id": "v-1bb9c728#heading-2",
    "t": [],
  },
  {
    "h": "Heading 3",
    "id": "v-1bb9c728#heading-3",
    "t": [],
  },
  {
    "h": "Heading 4",
    "id": "v-1bb9c728#heading-4",
    "t": [],
  },
  {
    "h": "Heading 5",
    "id": "v-1bb9c728#heading-5",
    "t": [],
  },
  {
    "h": "Heading 6",
    "id": "v-1bb9c728#heading-6",
    "t": [],
  },
  {
    "h": "Text",
    "id": "v-1bb9c728#text",
    "t": [
      "This sentence has bold、italic and delete style text.",
    ],
  },
  {
    "h": "Paragraph",
    "id": "v-1bb9c728#paragraph",
    "t": [
      "This is a paragraph.",
      "This is another paragraph.",
    ],
  },
  {
    "h": "Line Break",
    "id": "v-1bb9c728#line-break",
    "t": [
      "I would like to line break at this point",
      "::: tip",
      "In codes above, two spaces are behind at.",
      ":::",
    ],
  },
  {
    "h": "Blockquotes",
    "id": "v-1bb9c728#blockquotes",
    "t": [
      "Blockquotes can also be nested...",
      "...by using greater-than signs right next to each other...",
      "...or with spaces between arrows.",
    ],
  },
  {
    "h": "List",
    "id": "v-1bb9c728#list",
    "t": [],
  },
  {
    "h": "Unordered List",
    "id": "v-1bb9c728#unordered-list",
    "t": [
      "Create a list by starting a line with -",
      "Make sub-lists by indenting 2 spaces:",
      "Marker character change forces new list start:",
      "Ac tristique libero volutpat at",
      "Facilisis in pretium nisl aliquet",
      "Nulla volutpat aliquam velit link break",
      "New paragraph",
      "It’s easy!",
    ],
  },
  {
    "h": "Ordered List",
    "id": "v-1bb9c728#ordered-list",
    "t": [
      "Lorem ipsum dolor sit amet",
      "Consectetur adipiscing elit line break line break again",
      "Integer molestie lorem at massa",
    ],
  },
  {
    "h": "HR",
    "id": "v-1bb9c728#hr",
    "t": [],
  },
  {
    "h": "Link",
    "id": "v-1bb9c728#link",
    "t": [
      "Home page using absolute path",
      "Home page using relative path",
    ],
  },
  {
    "h": "Image",
    "id": "v-1bb9c728#image",
    "t": [],
  },
  {
    "h": "Emoji",
    "id": "v-1bb9c728#emoji",
    "t": [
      "Classic:",
      "😉 😢 😆 😋",
    ],
  },
  {
    "h": "Tables",
    "id": "v-1bb9c728#tables",
    "t": [
      "center",
      "right",
      "left",
      "For center align use :-:",
      "For right align use -:",
      "For left align use :-",
      "b",
      "aaaaaaaaa",
      "aaaa",
      "c",
      "aaaa",
      "a",
    ],
  },
  {
    "h": "Codes",
    "id": "v-1bb9c728#codes",
    "t": [
      "Inline Code: code",
      "Block code:",
      "Sample text here... ",
      "Syntax highlighting:",
      "var foo = function (bar) { return bar++; }; console.log(foo(5)); ",
    ],
  },
]
`;

exports[`generateIndex > Should generate full index 3`] = `
[
  {
    "h": "Tag Test",
    "id": "v-6e785e10",
    "t": [
      "Markdown content.",
    ],
  },
]
`;

exports[`generateIndex > Should generate full index 4`] = `
[
  {
    "h": "",
    "id": "v-40f33c88",
    "t": [
      "Markdown content.",
    ],
  },
]
`;

exports[`generateIndex > Should generate full index 5`] = `[]`;

exports[`generateIndex > Should generate index 1`] = `
[
  {
    "h": "Demo Page",
    "id": "v-2b30cdfd",
    "t": [
      "Here is article excerpt.",
      "const a = 1; ",
    ],
  },
  {
    "h": "Content",
    "id": "v-2b30cdfd#content",
    "t": [],
  },
]
`;

exports[`generateIndex > Should generate index 2`] = `
[
  {
    "h": "Heading 1",
    "id": "v-1bb9c728",
  },
  {
    "h": "Heading 2",
    "id": "v-1bb9c728#heading-2",
    "t": [],
  },
  {
    "h": "Heading 3",
    "id": "v-1bb9c728#heading-3",
    "t": [],
  },
  {
    "h": "Heading 4",
    "id": "v-1bb9c728#heading-4",
    "t": [],
  },
  {
    "h": "Heading 5",
    "id": "v-1bb9c728#heading-5",
    "t": [],
  },
  {
    "h": "Heading 6",
    "id": "v-1bb9c728#heading-6",
    "t": [],
  },
  {
    "h": "Text",
    "id": "v-1bb9c728#text",
    "t": [],
  },
  {
    "h": "Paragraph",
    "id": "v-1bb9c728#paragraph",
    "t": [],
  },
  {
    "h": "Line Break",
    "id": "v-1bb9c728#line-break",
    "t": [],
  },
  {
    "h": "Blockquotes",
    "id": "v-1bb9c728#blockquotes",
    "t": [],
  },
  {
    "h": "List",
    "id": "v-1bb9c728#list",
    "t": [],
  },
  {
    "h": "Unordered List",
    "id": "v-1bb9c728#unordered-list",
    "t": [],
  },
  {
    "h": "Ordered List",
    "id": "v-1bb9c728#ordered-list",
    "t": [],
  },
  {
    "h": "HR",
    "id": "v-1bb9c728#hr",
    "t": [],
  },
  {
    "h": "Link",
    "id": "v-1bb9c728#link",
    "t": [],
  },
  {
    "h": "Image",
    "id": "v-1bb9c728#image",
    "t": [],
  },
  {
    "h": "Emoji",
    "id": "v-1bb9c728#emoji",
    "t": [],
  },
  {
    "h": "Tables",
    "id": "v-1bb9c728#tables",
    "t": [],
  },
  {
    "h": "Codes",
    "id": "v-1bb9c728#codes",
    "t": [],
  },
]
`;

exports[`generateIndex > Should generate index 3`] = `
[
  {
    "h": "Tag Test",
    "id": "v-6e785e10",
  },
]
`;

exports[`generateIndex > Should generate index 4`] = `
[
  {
    "h": "",
    "id": "v-40f33c88",
  },
]
`;

exports[`generateIndex > Should generate index 5`] = `[]`;

exports[`generateIndex > Should support customFields 1`] = `
[
  {
    "c": {
      "0": [
        "Demo",
      ],
    },
    "h": "Demo Page",
    "id": "v-2b30cdfd",
    "t": [
      "Here is article excerpt.",
      "const a = 1; ",
    ],
  },
  {
    "h": "Content",
    "id": "v-2b30cdfd#content",
    "t": [],
  },
]
`;

exports[`generateIndex > Should support customFields 2`] = `
[
  {
    "h": "Heading 1",
    "id": "v-1bb9c728",
  },
  {
    "h": "Heading 2",
    "id": "v-1bb9c728#heading-2",
    "t": [],
  },
  {
    "h": "Heading 3",
    "id": "v-1bb9c728#heading-3",
    "t": [],
  },
  {
    "h": "Heading 4",
    "id": "v-1bb9c728#heading-4",
    "t": [],
  },
  {
    "h": "Heading 5",
    "id": "v-1bb9c728#heading-5",
    "t": [],
  },
  {
    "h": "Heading 6",
    "id": "v-1bb9c728#heading-6",
    "t": [],
  },
  {
    "h": "Text",
    "id": "v-1bb9c728#text",
    "t": [],
  },
  {
    "h": "Paragraph",
    "id": "v-1bb9c728#paragraph",
    "t": [],
  },
  {
    "h": "Line Break",
    "id": "v-1bb9c728#line-break",
    "t": [],
  },
  {
    "h": "Blockquotes",
    "id": "v-1bb9c728#blockquotes",
    "t": [],
  },
  {
    "h": "List",
    "id": "v-1bb9c728#list",
    "t": [],
  },
  {
    "h": "Unordered List",
    "id": "v-1bb9c728#unordered-list",
    "t": [],
  },
  {
    "h": "Ordered List",
    "id": "v-1bb9c728#ordered-list",
    "t": [],
  },
  {
    "h": "HR",
    "id": "v-1bb9c728#hr",
    "t": [],
  },
  {
    "h": "Link",
    "id": "v-1bb9c728#link",
    "t": [],
  },
  {
    "h": "Image",
    "id": "v-1bb9c728#image",
    "t": [],
  },
  {
    "h": "Emoji",
    "id": "v-1bb9c728#emoji",
    "t": [],
  },
  {
    "h": "Tables",
    "id": "v-1bb9c728#tables",
    "t": [],
  },
  {
    "h": "Codes",
    "id": "v-1bb9c728#codes",
    "t": [],
  },
]
`;

exports[`generateIndex > Should support customFields 3`] = `
[
  {
    "c": {
      "0": [
        "markdown",
      ],
    },
    "h": "Tag Test",
    "id": "v-6e785e10",
  },
]
`;

exports[`generateIndex > Should support customFields 4`] = `
[
  {
    "c": {
      "0": [
        "markdown",
      ],
    },
    "h": "",
    "id": "v-40f33c88",
  },
]
`;

exports[`generateIndex > Should support customFields 5`] = `[]`;

exports[`generateIndex > Should support customFields with full index 1`] = `
[
  {
    "c": {
      "0": [
        "Demo",
      ],
    },
    "h": "Demo Page",
    "id": "v-2b30cdfd",
    "t": [
      "Here is article excerpt.",
      "const a = 1; ",
    ],
  },
  {
    "h": "Content",
    "id": "v-2b30cdfd#content",
    "t": [
      "Here is main content of article.",
      "A",
      "B",
      "C",
      "const a = 1; ",
    ],
  },
]
`;

exports[`generateIndex > Should support customFields with full index 2`] = `
[
  {
    "h": "Heading 1",
    "id": "v-1bb9c728",
  },
  {
    "h": "Heading 2",
    "id": "v-1bb9c728#heading-2",
    "t": [],
  },
  {
    "h": "Heading 3",
    "id": "v-1bb9c728#heading-3",
    "t": [],
  },
  {
    "h": "Heading 4",
    "id": "v-1bb9c728#heading-4",
    "t": [],
  },
  {
    "h": "Heading 5",
    "id": "v-1bb9c728#heading-5",
    "t": [],
  },
  {
    "h": "Heading 6",
    "id": "v-1bb9c728#heading-6",
    "t": [],
  },
  {
    "h": "Text",
    "id": "v-1bb9c728#text",
    "t": [
      "This sentence has bold、italic and delete style text.",
    ],
  },
  {
    "h": "Paragraph",
    "id": "v-1bb9c728#paragraph",
    "t": [
      "This is a paragraph.",
      "This is another paragraph.",
    ],
  },
  {
    "h": "Line Break",
    "id": "v-1bb9c728#line-break",
    "t": [
      "I would like to line break at this point",
      "::: tip",
      "In codes above, two spaces are behind at.",
      ":::",
    ],
  },
  {
    "h": "Blockquotes",
    "id": "v-1bb9c728#blockquotes",
    "t": [
      "Blockquotes can also be nested...",
      "...by using greater-than signs right next to each other...",
      "...or with spaces between arrows.",
    ],
  },
  {
    "h": "List",
    "id": "v-1bb9c728#list",
    "t": [],
  },
  {
    "h": "Unordered List",
    "id": "v-1bb9c728#unordered-list",
    "t": [
      "Create a list by starting a line with -",
      "Make sub-lists by indenting 2 spaces:",
      "Marker character change forces new list start:",
      "Ac tristique libero volutpat at",
      "Facilisis in pretium nisl aliquet",
      "Nulla volutpat aliquam velit link break",
      "New paragraph",
      "It’s easy!",
    ],
  },
  {
    "h": "Ordered List",
    "id": "v-1bb9c728#ordered-list",
    "t": [
      "Lorem ipsum dolor sit amet",
      "Consectetur adipiscing elit line break line break again",
      "Integer molestie lorem at massa",
    ],
  },
  {
    "h": "HR",
    "id": "v-1bb9c728#hr",
    "t": [],
  },
  {
    "h": "Link",
    "id": "v-1bb9c728#link",
    "t": [
      "Home page using absolute path",
      "Home page using relative path",
    ],
  },
  {
    "h": "Image",
    "id": "v-1bb9c728#image",
    "t": [],
  },
  {
    "h": "Emoji",
    "id": "v-1bb9c728#emoji",
    "t": [
      "Classic:",
      "😉 😢 😆 😋",
    ],
  },
  {
    "h": "Tables",
    "id": "v-1bb9c728#tables",
    "t": [
      "center",
      "right",
      "left",
      "For center align use :-:",
      "For right align use -:",
      "For left align use :-",
      "b",
      "aaaaaaaaa",
      "aaaa",
      "c",
      "aaaa",
      "a",
    ],
  },
  {
    "h": "Codes",
    "id": "v-1bb9c728#codes",
    "t": [
      "Inline Code: code",
      "Block code:",
      "Sample text here... ",
      "Syntax highlighting:",
      "var foo = function (bar) { return bar++; }; console.log(foo(5)); ",
    ],
  },
]
`;

exports[`generateIndex > Should support customFields with full index 3`] = `
[
  {
    "c": {
      "0": [
        "markdown",
      ],
    },
    "h": "Tag Test",
    "id": "v-6e785e10",
    "t": [
      "Markdown content.",
    ],
  },
]
`;

exports[`generateIndex > Should support customFields with full index 4`] = `
[
  {
    "c": {
      "0": [
        "markdown",
      ],
    },
    "h": "",
    "id": "v-40f33c88",
    "t": [
      "Markdown content.",
    ],
  },
]
`;

exports[`generateIndex > Should support customFields with full index 5`] = `[]`;
